adiconar imagens e adicionar m paragrafro

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <meta http-equiv="refresh" content="0; url=/WD200AWP/wd200awp.exe/CONNECT/CoutinhoInfo">
 </head>
 <body>
+<p>Olá Mundo</p>
 </body>
 </html>
